github repo fix

--- a/InputfieldURLChecker.css
+++ b/InputfieldURLChecker.css
@@ -1,6 +1,6 @@
 /**
  * InputfieldURLChecker module for ProcessWire
- * https://goo.gl/KBXssq
+ * https://github.com/rolandtoth/InputfieldURLChecker
  */
 
 .iuc-link {
