--- a/InputfieldURLChecker.css
+++ b/InputfieldURLChecker.css
@@ -1,123 +1,29 @@
-/**
- * InputfieldURLChecker module for ProcessWire
- * https://goo.gl/F8CAK8
- */
+#Changelog
 
-.iuc-button {
-    position: absolute;
-    margin-top: 1px;
-    right: 16px;
-    padding: 0 12px;
-    background: transparent;
-}
 
-.iuc-overlay {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 990;
-    background: rgba(0, 0, 0, 0.7);
-}
+### 1.1.4 (2016-04-26)
 
-.iuc-overlay:hover {
-    cursor: pointer;
-}
+- allow module on Profile page
+- CSS fix for ProFields Multiplier
 
-.iuc-iframe {
-    border: none;
-    display: block;
-    width: 1600px;
-    max-width: 50%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    right: 0;
-    overflow: auto;
-    background: #fff url('loading.gif') center center no-repeat;
-    z-index: 1020;
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
-    -webkit-transition: -webkit-transform 0.25s;
-    transition: transform 0.25s;
-}
+### 1.1.3 (2016-01-23)
 
-.iuc-iframe-error {
-    display: block;
-    width: 1600px;
-    max-width: 50%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    right: 0;
-    padding: 30px;
-    overflow: hidden;
-    background: #fff;
-    z-index: 1030;
-}
+- restrict module to ProcessPageEdit (thanks to outflux3)
 
-.iuc-iframe-error p {
-    text-align: center;
-    position: relative;
-    max-width: 90%;
-    margin: 0 auto;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
 
-.iuc-iframe-animate {
-    transform: translateX(0);
-    -webkit-transform: translateX(0);
-}
+### 1.1.2 (2016-01-06)
 
-.iuc-iframe-loaded {
-    background-image: none;
-}
+- sanitize id (thanks to horst-n)
 
-.iuc-button.button-left {
-    right: auto;
-    left: 16px;
-}
 
-.iuc-button i {
-    color: rgba(0, 0, 0, 0.2);
-    text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.4);
-    -webkit-transition: color 0.2s;
-    -moz-transition: color 0.2s;
-    transition: color 0.2s;
-}
+### 1.1.0 (2015-11-22)
 
-.iuc-button.iuc-hide {
-    pointer-events: none !important;
-}
+- module was rewritten to use InputfieldURL::render hook instead JavaScript
+- fixed locked url fields when field description or notes were present
+- locked url fields respect module setting "target" to open url in new window or iframe
 
-.InputfieldURL .InputfieldContent {
-    position: relative;
-}
 
-.iuc-button.button-right + input {
-    padding-right: 36px !important;
-}
+### 1.0.5 (2015-11-21)
 
-.iuc-button.button-left + input {
-    padding-left: 36px !important;
-}
-
-.InputfieldURL input:focus + .iuc-button i {
-    color: rgba(0, 0, 0, 0.32);
-}
-
-.iuc-button:not(.iuc-hide):hover i {
-    color: inherit !important;
-}
-
-.iuc-button:active i {
-    font-size: 0.88em !important;
-}
-
-.collapsed7.InputfieldURL .InputfieldContent a:hover,
-.collapsed8.InputfieldURL .InputfieldContent a:hover {
-    text-decoration: underline;
-}
+- fixed disfunctional "Enabled fields" (reported by Macrura)
+- extra padding added only to fields that have IUC buttons
